SimLang/src/test/resources/test/coco/invalid/WrongUnits.sim
sim WrongUnits {
  sim_render_frequency 60km;
  map_name HorsterDreieck.osm;
}